# testOpencvCmake

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md  main.cpp
subsrc/: CMakeLists.txt  func.cpp  func.h
